<resources>
    <string name="app_name">REDI</string>
    <string name="card_amp_bank_account_settings"><![CDATA[Card & Bank account settings]]></string>
    <string name="notification_settings">Notification Settings</string>
    <string name="hello_ken">Hello Ken</string>
    <string name="current_balance">Current balance:</string>
    <string name="n10_712_00">N10,712:00</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_phone_no_address_email">Name, phone no, address, email ...</string>
    <string name="enable_dark_mode">Enable dark Mode</string>
    <string name="statements_amp_reports"><![CDATA[Statements & Reports]]></string>
    <string name="download_transaction_details_orders_deliveries">Download transaction details, orders, deliveries</string>
    <string name="referrals">Referrals</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="mute_unmute_set_location_amp_tracking_setting"><![CDATA[mute, unmute, set location & tracking setting]]></string>
    <string name="change_cards_delete_card_details">change cards, delete card details</string>
    <string name="check_no_of_friends_and_earn">check no of friends and earn</string>
    <string name="know_more_about_us_terms_and_conditions">know more about us, terms and conditions</string>
    <string name="remember_password_back_to">Remember password? Back to</string>
    <string name="sign_in">Sign in</string>
    <string name="mail_com">***********@mail.com</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="new_password">New Password</string>
    <string name="hint_password">**********</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="quick_delivery_at_your_doorstep">Quick Delivery At Your Doorstep</string>
    <string name="enjoy_quick_pick_up_and_delivery_to_your_destination">Enjoy quick pick-up and delivery to your destination</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="flexible_payment">Flexible Payment</string>
    <string name="different_modes_of_payment_either_before_and_after_delivery_without_stress">Different modes of payment either before and after delivery without stress</string>
    <string name="if_you_didn_t_receive_code">If you didn’t receive code,</string>
    <string name="enter_the_6_digit_numbers_sent_to_your_email">Enter the 6 digit numbers sent to your email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="set_new_password">Set New Password</string>
    <string name="resend_after_1_00">resend after 1:00</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">" Sign Up"</string>
    <string name="fill_in_your_email_and_password_to_continue">Fill in your email and password to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="remember_password">Remember password</string>
    <string name="log_in">Log in</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="_7_999_999_99_99">+7(999)999-99-99</string>
    <string name="phone_number">Phone Number</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="complete_the_sign_up_process_to_get_started">Complete the sign up process to get started</string>
    <string name="full_name">Full name</string>
    <string name="create_an_account">Create an account</string>
    <string name="by_ticking_this_box_you_agree_to_our_terms_and_conditions_and_private_policy">By ticking this box, you agree to our Terms and conditions and private policy</string>
</resources>