<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_password"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="16dp"
                android:text="@string/remember_password_back_to"
                android:textColor="#A7A7A7"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_send_otp" />

            <TextView
                android:id="@+id/textView_sign_in_welcome_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="16dp"
                android:text="@string/sign_in"
                android:textColor="#0560FA"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView_time"
                app:layout_constraintStart_toEndOf="@+id/textView_time" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="342dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/for_edit_text"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/mail_com"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:text=""
                android:textColor="#3A3A3A"
                android:textColorHint="#CFCFCF"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_1_email" />

            <TextView
                android:id="@+id/textView_1_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/email_address"
                android:textColor="#A7A7A7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="166dp"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="16dp"
                android:text="@string/enter_your_email_address"
                android:textColor="#A7A7A7"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="193dp"
                android:layout_height="30dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="30dp"
                android:text="@string/forgot_password"
                android:textColor="#3A3A3A"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_send_otp"
                android:layout_width="342dp"
                android:layout_height="46dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/for_buttons_session_2_1"
                android:fontFamily="@font/roboto_bold"
                android:lineHeight="16dp"
                android:stateListAnimator="@null"
                android:text="@string/send_otp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>